add list workspaces api endpoint
